k8s/apps/openchokin/back/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: openchokin-back
  namespace: openchokin
spec:
  hostnames:
    - api-openchokin.walnuts.dev
  parentRefs:
    - name: envoy-gateway
      namespace: envoy-gateway-system
  rules:
    - backendRefs:
        - kind: Service
          name: openchokin-back
          port: 8080
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
